<resources>
    <!-- Application -->
    <string name="app_name">PhotoPoints</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu Tabs-->
    <string name="menu_scan">Scan</string>
    <string name="menu_photopoints">PhotoPoints</string>
    <string name="menu_map">Map</string>

    <!-- User Account -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="login">Login</string>
    <string name="no_account_yet">No account yet? Create one</string>
    <string name="sign_up">Sign Up</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="change">Change</string>
    <string name="dateFormat">%1$d.%2$d.%3$d</string>

    <!-- Upload data -->
    <string name="survey_data">Survey Data</string>
    <string name="picture_focus">When taking pictures, focus on:</string>
    <string name="more_details">More details</string>
    <string name="try_again">Woops... Please try again...</string>

    <!-- Barcode Scanner -->
    <string name="please_scan_qr_code">Please scan the QR Code.</string>
    <string name="camera_start_error">Camera could not start. Please grant camera permissions.</string>
    <string name="qr_code_not_found">PhotoPoint could not be found.</string>

    <!-- Splash -->
    <string name="synching_data">Synching data</string>

</resources>
