<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_menu"
    app:startDestination="@+id/navigation_scan">

    <fragment
        android:id="@+id/navigation_scan"
        android:name="edu.cascadia.mobas.photopoints.ui.scan.ScanFragment"
        android:label="@string/menu_scan"
        tools:layout="@layout/fragment_scan" />

    <fragment
        android:id="@+id/navigation_photopoints"
        android:name="edu.cascadia.mobas.photopoints.ui.photopoints.PhotoPointsFragment"
        android:label="@string/menu_photopoints"
        tools:layout="@layout/fragment_photopoints" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="edu.cascadia.mobas.photopoints.ui.map.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />

</navigation>