<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    android:id="@+id/fragment_signIn"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fragmentBackground"
    tools:context=".ui.login.SignInFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_logo"
        style="@style/ImageFoNCF"
        android:src="@drawable/fncf_logo_horizontal"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="15dp"
        style="@style/TextInputLayout"
        app:hintEnabled="true"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout"
        app:hintEnabled="true"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        style="@style/Button"
        android:text="@string/login"
        app:rippleColor="@color/colorAccent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/no_account_yet"
        android:gravity="center"
        android:textSize="16sp"/>

</androidx.appcompat.widget.LinearLayoutCompat>